--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,7 +6,6 @@ jobs:
   build-docs:
     runs-on: ubuntu-latest
     steps:
-
       #获取Log文件 并更新提交记录创建新的分支 并提交pr
       - name: Pull request
-        run: '/libs/index.js'
+        run: yarn pr
