--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,11 +1,13 @@
 name: docs-ci
 
-on: [push,pull_request]
+on:
+  push:
+    branches:
+      - master
 
 jobs: 
   build-docs:
     runs-on: ubuntu-latest
     steps:
-      #获取Log文件 并更新提交记录创建新的分支 并提交pr
       - name: Pull request
         run: yarn pr
