--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "json-server": "json-server __json_server_mock__/db.json --watch --port 3001",
-    "pr": "node slibs/index.js"
+    "pr": "node libs/index.js"
   },
   "eslintConfig": {
     "extends": [
