--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.11.14",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
+    "cross-env": "^7.0.3",
     "fs": "^0.0.1-security",
     "moment": "^2.29.1",
     "react": "^17.0.2",
@@ -24,7 +25,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "json-server": "json-server __json_server_mock__/db.json --watch --port 3001",
-    "pr": "node libs/index.js"
+    "pr": "cross-env buildTag=serve node ./libs/index.js"
   },
   "eslintConfig": {
     "extends": [
